--- a/src/components/LoginComponent/styles.css
+++ b/src/components/LoginComponent/styles.css
@@ -29,17 +29,18 @@ main .form-content {
     margin: 0 auto;
     display: flex;
     align-items: center;
+    justify-content: center;
     z-index: 2;
 }
 
 main .form-content section {
-    width: 500px;
-    height: 550px;
+    width: 350px;
+    height: 400px;
     background-color: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     border-radius: 5px;
     display: grid;
-    grid-template-rows: 50px 500px;
+    grid-template-rows: 50px 350px;
 }
 
 section .form-options ul {
@@ -62,27 +63,13 @@ section .form-options ul li {
 }
 
 .form-options ul li:first-child {
-    box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 0.23);
-    border-radius: 25px 0 0 0;
+    box-shadow: inset -5px -5px 10px rgba(153, 153, 153, 0.23);
+    border-radius: 5px 0 0 0;
 }
 
 .form-options ul li a {
     text-decoration: none;
     color: white;
-}
-
-li first-child:active {
-    animation: teste 1s ease-in forwards;
-}
-
-@keyframes teste {
-    0% {
-        background-color: black;
-
-    }
-    100% {
-        background-color: white;
-    }
 }
 
 .form-infos {
@@ -100,7 +87,6 @@ li first-child:active {
     display: block;
     position: absolute;
     transition: all .65s ease-out;
-    background-color: teal;
 }
 
 .form-infos #register-form {
@@ -110,8 +96,6 @@ li first-child:active {
     display: none;
     position: absolute;
     transition: all .65s ease-out;
-    background-color: orange;
-    z-index: -2;
 }
 
 .form-infos #register-form:target {
@@ -139,6 +123,10 @@ li first-child:active {
     animation: toLeft 0.5s ease-out forwards;
 }
 
+.form-infos #login-form:not(:target) {
+    display: none
+}
+
 @keyframes toLeft {
     from {
         transform: translateX(-100%);
@@ -146,4 +134,62 @@ li first-child:active {
     to {
         transform: translateX(0);
     }
+}
+
+form .login-space {
+    margin: 40px 0;
+}
+
+form .register-space {
+    margin: 10px 0
+}
+
+form .input-block label{
+    display: block;
+    color: rgb(133, 133, 133);
+}
+
+form .input-block input{
+    margin-top: 5px;
+    width: 100%;
+    height: 32px;
+    border-radius: 50px;
+    transition: all 0.6s ease-in;
+    border: 2px solid rgb(240, 211, 152);
+}
+
+form .input-block input:focus {
+    margin-top: 5px;
+    width: 100%;
+    height: 32px;
+    border-radius: 50px;
+    border: 2px solid rgb(239, 180, 65);
+}
+
+form .input-block input[value] {
+}
+
+form .input-group {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px;
+}
+
+.form-infos button {
+    position: absolute;
+    bottom: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 40px;
+    background-color: rgb(239, 180, 65);
+    border-radius: 50px;
+    border: none;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: rgb(240, 196, 108);
+    box-shadow: -1px 0 5px rgb(43, 43, 43);
 }
