--- a/src/components/MainComponent/styles.css
+++ b/src/components/MainComponent/styles.css
@@ -32,53 +32,10 @@
     overflow: hidden;
 }
 
-section .form-options ul {
+.tab-content {
     width: 100%;
     height: 100%;
-    background-color: rgb(14, 30, 19);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: none;
-    box-shadow: 0 1px 2px rgb(43, 43, 43);
-    border-radius: 5px 5px 0 0;
-}
 
-section .form-options ul li {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.1s ease-in;
-}
-
-.form-options ul li:active {
-    box-shadow: inset -5px -5px 10px rgba(153, 153, 153, 0.23);
-    border-radius: 5px 0 0 0;
-}
-
-@keyframes teste {
-    from {
-        box-shadow: none;
-        border-radius: none;
-    }
-    to {
-        box-shadow: inset -5px -5px 10px rgba(153, 153, 153, 0.23);
-        border-radius: 5px 0 0 0;
-    }
-}
-
-.form-options ul li a {
-    text-decoration: none;
-    color: white;
-}
-
-.form-infos {
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: relative;
-    z-index: 2;
 }
 
 form {
