--- a/src/components/FooterComponent/styles.css
+++ b/src/components/FooterComponent/styles.css
@@ -11,6 +11,7 @@ footer {
 footer .footer-info {
     display: flex;
     align-items: center;
+    justify-content: center;
     margin: 0 auto;
     height: 100%;
     width: 200px;
