--- a/src/components/FormTextComponent/styles.css
+++ b/src/components/FormTextComponent/styles.css
@@ -14,6 +14,7 @@
     border-radius: 50px;
     transition: all 0.6s ease-in;
     border: 2px solid rgb(240, 211, 152);
+    padding: 0 10px;
 }
 
 .input-block input:focus {
