--- a/src/components/MainComponent/styles.css
+++ b/src/components/MainComponent/styles.css
@@ -27,15 +27,13 @@
     background-color: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
     border-radius: 5px;
-    display: grid;
-    grid-template-rows: 50px 400px;
     overflow: hidden;
 }
 
 .tab-content {
-    width: 100%;
-    height: 100%;
-
+    width: calc(100% - 20px);
+    height: calc(400px - 10px);
+    margin: 20px 10px 0 10px;
 }
 
 form {
@@ -47,54 +45,12 @@ form {
     justify-content: space-evenly;
 }
 
-.form-infos #login-form {
-    width: calc(100% - 40px);
-    height: calc(100% - 20px);
-    margin: 10px 20px;
-    position: absolute;
-    transition: all .65s ease-out;
-}
-
-.form-infos #register-form {
-    width: calc(100% - 40px);
-    height: calc(100% - 20px);
-    margin: 10px 20px;
-    display: none;
-    position: absolute;
-    transition: all .65s ease-out;
-}
-
-.form-infos #register-form:target {
-    display: block;
-    z-index: 1;
-    animation: toLeft 0.5s ease-out forwards;
-}
-
-.form-infos #login-form:target #register-form {
-    display: none;
-}
-
-.form-infos #login-form:target {
-    display: block;
-    z-index: 0;
-    animation: toLeft 0.5s ease-out forwards;
-}
-
-.form-infos #register-form:target + #login-form {
-    display: none;
-    opacity: 0;
-    z-index: -111;
-}
-
-@keyframes toLeft {
-    from {
-        opacity: 0;
-        transform: translateX(-100%);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
+#login-form, #register-form {
+    width: calc(100% - 10px);
+    height: calc(100% - 10px);
+    position: relative;
+    margin: 0 auto;
+    transition: all 1s linear;
 }
 
 .login-space {
@@ -126,7 +82,7 @@ form fieldset {
     margin-left: 5px;
 }
 
-.form-infos button {
+.tab-content button {
     position: absolute;
     left: 50%;
     bottom: 20px;
@@ -140,8 +96,47 @@ form fieldset {
     cursor: pointer;
 }
 
-form button:hover {
+.tab-content button:hover {
     background-color: rgb(240, 196, 108);
     box-shadow: -1px 0 5px rgb(43, 43, 43);
+}
+
+.info {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 100px;
+    margin: 0;
+    color: white;
+    font-size: 30px;
+}
+
+.info p {
+   margin-top: 10px;
+}
+
+
+@media only screen and (max-width: 1400px) {
+    .info {
+        width: 100%;
+        height: 100px;
+        top: 80px;
+        transform: translate3d(-50%, 0, 0);
+        left: 50%;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .form-content { 
+        width: 300px;
+        height: calc(100% - 70px);
+        align-items: flex-end;
+    }    
+    .info {
+        font-size: 12px;
+    }
 }
 
